# python-ooxml-i18n

./: FEATURES.md  README.md  pyproject.toml
src/ooxml_i18n/: __init__.py  constants.py  core.py  exceptions.py  format.py  lang.py  pofile.py  strings.py  walker.py
tests/unit/: _builders.py  test_extract_apply.py  test_format.py  test_pofile.py  test_strings.py
